# nes_emulator

./: .gitignore  BLUEPRINT.md  CMakeLists.txt  Makefile  README.md
src/: cpu.c  cpu.h  main.c  opcodes.c  opcodes.h
tests/: simple_test.c  test_cpu.c
